# voice-operator

./: .gitignore  README.md  config.example.yaml  pyproject.toml
docs/superpowers/plans/: 2026-05-23-voice-operator.md
docs/superpowers/specs/: 2026-05-23-voice-operator-design.md
tests/: test_audio.py  test_audio_ducking.py  test_autostart.py  test_cleanup.py  test_config.py  test_context.py  test_hotkey.py  test_injector.py  test_session.py  test_stt.py
tests/fixtures/: transcripts.yaml
voice_operator/: __main__.py  audio.py  audio_ducking.py  autostart.py  cleanup.py  config.py  context.py  hotkey.py  injector.py  overlay.py  session.py  stt.py  tray.py
