[project]
name = "voice-operator"
version = "0.1.0"
description = "Personal Wispr-Flow-style voice dictation for Windows on ElevenLabs Scribe v2 + Claude Haiku."
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "websockets>=13",
    "sounddevice>=0.4.6",
    "numpy>=1.26",
    "pynput>=1.7",
    "pywin32>=306",
    "pycaw>=20240210",
    "comtypes>=1.4",
    "pystray>=0.19",
    "Pillow>=10",
    "PyYAML>=6",
]

[project.scripts]
voice-operator = "voice_operator.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: hits live services (ElevenLabs API key / Claude on Max via Agent SDK)",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
